<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_operating_height"
    android:layout_gravity="bottom"
    android:background="@color/bottom_menu_background"
    android:orientation="horizontal">

<!--    <include-->
<!--        android:id="@+id/layoutSearchAppbar"-->
<!--        layout="@layout/layout_search_appbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayoutMenuBookMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/layout_read_mode_menu_icon_width"
                android:layout_height="@dimen/layout_read_mode_menu_icon_height"
                android:src="@mipmap/bottom_menu_book_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_bottom_menu_book_mark"
                android:textColor="@color/darkColor_default"
                android:textSize="@dimen/textView_normal_textSize_narrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMenuPen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/layout_read_mode_menu_icon_width"
                android:layout_height="@dimen/layout_read_mode_menu_icon_height"
                android:src="@mipmap/suolue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_thumbnail_title"
                android:textColor="@color/darkColor_default"
                android:textSize="@dimen/textView_normal_textSize_narrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMenuText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageNightViewCrop"
                android:layout_width="@dimen/layout_read_mode_menu_icon_width"
                android:layout_height="@dimen/layout_read_mode_menu_icon_height"
                android:src="@mipmap/moon_stars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popupwindow_read_mode_item_night"
                android:textColor="@color/darkColor_default"
                android:textSize="@dimen/textView_normal_textSize_narrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMenuMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/layout_read_mode_menu_icon_width"
                android:layout_height="@dimen/layout_read_mode_menu_icon_height"
                android:src="@mipmap/bottom_menu_more" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_bottom_menu_more"
                android:textColor="@color/darkColor_default"
                android:textSize="@dimen/textView_normal_textSize_narrow" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>