<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popupwindow_instruct_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/linearLayoutPenSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/view_normal_margin_default"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/popupwindow_instruct_pen_size_text"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/view_normal_margin_narrow"
                        android:background="@color/popupwindow_instruct_stroke_background"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewReduce"
                            android:layout_width="@dimen/popupwindow_instruct_pen_size_edit_height"
                            android:layout_height="@dimen/popupwindow_instruct_pen_size_edit_height"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/popupwindow_instruct_pen_size_reduce_text"
                            android:textColor="@color/mainColorHelp_default"
                            android:textSize="@dimen/textView_normal_textSize_default" />

                        <FrameLayout
                            android:layout_width="@dimen/popupwindow_instruct_pen_size_edit_content_width"
                            android:layout_height="@dimen/popupwindow_instruct_pen_size_edit_height"
                            android:background="@drawable/popupwindow_instruct_stroke_background">

                            <TextView
                                android:id="@+id/textViewContent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:singleLine="true"
                                android:text="@string/popupwindow_instruct_pen_size_default_text"
                                android:textColor="?attr/mainColorText"
                                android:textSize="@dimen/textView_normal_textSize_narrow" />

                        </FrameLayout>

                        <TextView
                            android:id="@+id/textViewAdd"
                            android:layout_width="@dimen/popupwindow_instruct_pen_size_edit_height"
                            android:layout_height="@dimen/popupwindow_instruct_pen_size_edit_height"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/popupwindow_instruct_pen_size_add_text"
                            android:textColor="@color/mainColorHelp_default"
                            android:textSize="@dimen/textView_normal_textSize_default" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="@string/popupwindow_instruct_title"
                    android:textColor="?attr/mainColorText"
                    android:textSize="@dimen/textView_normal_textSize_broad"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/imageViewClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:padding="@dimen/view_normal_margin_default"
                    android:src="@mipmap/close" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_normal_widthOrHeight_narrow"
                android:background="@color/lineColor_default" />

            <LinearLayout
                android:id="@+id/linearLayoutSuggestion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/popupwindow_instruct_linearLayout_suggestion_height"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textViewSuggestionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/popupwindow_instruct_suggestion_text"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="@dimen/line_normal_widthOrHeight_narrow"
                    android:layout_height="match_parent"
                    android:background="@color/lineColor_default" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/textViewSuggestionContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />
                </FrameLayout>

            </LinearLayout>


            <FrameLayout
                android:id="@+id/frameLayoutDrawArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/popupwindow_instruct_draw_area_height"
                android:background="@drawable/popupwindow_instruct_stroke_coner_background">

                <com.snakeway.file_reader.views.DrawBoardView
                    android:id="@+id/drawBoardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.snakeway.file_reader.views.DrawBoardView>
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/popupwindow_instruct_operate_height"
                android:layout_marginTop="@dimen/view_normal_margin_default"
                android:layout_marginBottom="@dimen/view_normal_margin_default"
                android:background="@drawable/popupwindow_instruct_stroke_background"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/frameLayoutReset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/textViewReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/popupwindow_instruct_reset_text"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="@dimen/drawable_stroke_default"
                    android:layout_height="match_parent"
                    android:background="@color/popupwindow_instruct_stroke_background" />

                <FrameLayout
                    android:id="@+id/frameLayoutRecover"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/textViewRecover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/popupwindow_instruct_recover_text"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />

                </FrameLayout>


                <FrameLayout
                    android:layout_width="@dimen/drawable_stroke_default"
                    android:layout_height="match_parent"
                    android:background="@color/popupwindow_instruct_stroke_background" />

                <FrameLayout
                    android:id="@+id/frameLayoutSave"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/textViewSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/popupwindow_instruct_save_text"
                        android:textColor="?attr/mainColorText"
                        android:textSize="@dimen/textView_normal_textSize_default" />
                </FrameLayout>


                <FrameLayout
                    android:layout_width="@dimen/drawable_stroke_default"
                    android:layout_height="match_parent"
                    android:background="@color/popupwindow_instruct_stroke_background" />

                <FrameLayout
                    android:id="@+id/frameLayoutCommit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/popupwindow_instruct_solid_background">

                    <TextView
                        android:id="@+id/textViewCommit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/popupwindow_instruct_commit_text"
                        android:textColor="?attr/mainColorHelp"
                        android:textSize="@dimen/textView_normal_textSize_default" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>